fix: update btn-default class to prevent text wrapping

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -51,7 +51,7 @@ html {
 }
 
 .btn-default {
-  @apply bg-steelgreen text-white py-2 px-4 relative transition-all scale-100 inline-block uppercase shadow-none nowrap;
+  @apply bg-steelgreen text-white py-2 px-4 relative transition-all scale-100 inline-block uppercase shadow-none whitespace-nowrap;
   letter-spacing: 0.1rem;
 }
 
